[gd_scene load_steps=9 format=2]

[ext_resource path="res://addons/anima/fonts/Lato-Bold.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://addons/anima/ui/DeleteButton.tscn" type="PackedScene" id=2]
[ext_resource path="res://addons/anima/ui/PropertyFromTo.gd" type="Script" id=3]
[ext_resource path="res://addons/anima/ui/NumberEdit.tscn" type="PackedScene" id=4]

[sub_resource type="DynamicFont" id=1]
size = 18
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.0980392, 0.113725, 0.156863, 1 )

[sub_resource type="Image" id=5]
data = {
"data": PoolByteArray( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 223, 223, 223, 0, 223, 223, 223, 0, 223, 223, 223, 0, 223, 223, 223, 0, 223, 223, 223, 0, 223, 223, 223, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 223, 223, 223, 0, 223, 223, 223, 0, 223, 223, 223, 0, 223, 223, 223, 0, 223, 223, 223, 254, 223, 223, 223, 254, 223, 223, 223, 254, 223, 223, 223, 254, 223, 223, 223, 254, 223, 223, 223, 254, 223, 223, 223, 0, 223, 223, 223, 0, 223, 223, 223, 0, 223, 223, 223, 0, 0, 0, 0, 0, 223, 223, 223, 0, 223, 223, 223, 254, 223, 223, 223, 254, 223, 223, 223, 254, 223, 223, 223, 254, 223, 223, 223, 254, 223, 223, 223, 254, 223, 223, 223, 254, 223, 223, 223, 254, 223, 223, 223, 254, 223, 223, 223, 254, 223, 223, 223, 254, 223, 223, 223, 254, 223, 223, 223, 254, 223, 223, 223, 254, 223, 223, 223, 0, 223, 223, 223, 0, 223, 223, 223, 254, 223, 223, 223, 254, 223, 223, 223, 254, 223, 223, 223, 254, 223, 223, 223, 254, 223, 223, 223, 254, 223, 223, 223, 254, 223, 223, 223, 254, 223, 223, 223, 254, 223, 223, 223, 254, 223, 223, 223, 254, 223, 223, 223, 254, 223, 223, 223, 254, 223, 223, 223, 254, 223, 223, 223, 0, 0, 0, 0, 0, 223, 223, 223, 0, 223, 223, 223, 0, 223, 223, 223, 0, 223, 223, 223, 0, 223, 223, 223, 0, 223, 223, 223, 0, 223, 223, 223, 0, 223, 223, 223, 0, 223, 223, 223, 0, 223, 223, 223, 0, 223, 223, 223, 0, 223, 223, 223, 0, 223, 223, 223, 0, 223, 223, 223, 0, 0, 0, 0, 0, 0, 0, 0, 0, 223, 223, 223, 0, 223, 223, 223, 254, 223, 223, 223, 254, 223, 223, 223, 254, 223, 223, 223, 254, 223, 223, 223, 254, 223, 223, 223, 254, 223, 223, 223, 254, 223, 223, 223, 254, 223, 223, 223, 254, 223, 223, 223, 254, 223, 223, 223, 254, 223, 223, 223, 254, 223, 223, 223, 0, 0, 0, 0, 0, 0, 0, 0, 0, 223, 223, 223, 0, 223, 223, 223, 254, 223, 223, 223, 254, 223, 223, 223, 254, 223, 223, 223, 254, 223, 223, 223, 254, 223, 223, 223, 254, 223, 223, 223, 254, 223, 223, 223, 254, 223, 223, 223, 254, 223, 223, 223, 254, 223, 223, 223, 254, 223, 223, 223, 254, 223, 223, 223, 0, 0, 0, 0, 0, 0, 0, 0, 0, 223, 223, 223, 0, 223, 223, 223, 254, 223, 223, 223, 0, 223, 223, 223, 0, 223, 223, 223, 254, 223, 223, 223, 254, 223, 223, 223, 0, 223, 223, 223, 0, 223, 223, 223, 254, 223, 223, 223, 254, 223, 223, 223, 0, 223, 223, 223, 0, 223, 223, 223, 254, 223, 223, 223, 0, 0, 0, 0, 0, 0, 0, 0, 0, 223, 223, 223, 0, 223, 223, 223, 254, 223, 223, 223, 0, 223, 223, 223, 0, 223, 223, 223, 254, 223, 223, 223, 254, 223, 223, 223, 0, 223, 223, 223, 0, 223, 223, 223, 254, 223, 223, 223, 254, 223, 223, 223, 0, 223, 223, 223, 0, 223, 223, 223, 254, 223, 223, 223, 0, 0, 0, 0, 0, 0, 0, 0, 0, 223, 223, 223, 0, 223, 223, 223, 254, 223, 223, 223, 0, 223, 223, 223, 0, 223, 223, 223, 254, 223, 223, 223, 254, 223, 223, 223, 0, 223, 223, 223, 0, 223, 223, 223, 254, 223, 223, 223, 254, 223, 223, 223, 0, 223, 223, 223, 0, 223, 223, 223, 254, 223, 223, 223, 0, 0, 0, 0, 0, 0, 0, 0, 0, 223, 223, 223, 0, 223, 223, 223, 254, 223, 223, 223, 0, 223, 223, 223, 0, 223, 223, 223, 254, 223, 223, 223, 254, 223, 223, 223, 0, 223, 223, 223, 0, 223, 223, 223, 254, 223, 223, 223, 254, 223, 223, 223, 0, 223, 223, 223, 0, 223, 223, 223, 254, 223, 223, 223, 0, 0, 0, 0, 0, 0, 0, 0, 0, 223, 223, 223, 0, 223, 223, 223, 254, 223, 223, 223, 0, 223, 223, 223, 0, 223, 223, 223, 254, 223, 223, 223, 254, 223, 223, 223, 0, 223, 223, 223, 0, 223, 223, 223, 254, 223, 223, 223, 254, 223, 223, 223, 0, 223, 223, 223, 0, 223, 223, 223, 254, 223, 223, 223, 0, 0, 0, 0, 0, 0, 0, 0, 0, 223, 223, 223, 0, 223, 223, 223, 254, 223, 223, 223, 0, 223, 223, 223, 0, 223, 223, 223, 254, 223, 223, 223, 254, 223, 223, 223, 0, 223, 223, 223, 0, 223, 223, 223, 254, 223, 223, 223, 254, 223, 223, 223, 0, 223, 223, 223, 0, 223, 223, 223, 254, 223, 223, 223, 0, 0, 0, 0, 0, 0, 0, 0, 0, 222, 222, 222, 0, 222, 222, 222, 199, 223, 223, 223, 254, 223, 223, 223, 254, 223, 223, 223, 254, 223, 223, 223, 254, 223, 223, 223, 254, 223, 223, 223, 254, 223, 223, 223, 254, 223, 223, 223, 254, 223, 223, 223, 254, 223, 223, 223, 254, 222, 222, 222, 199, 222, 222, 222, 0, 0, 0, 0, 0, 0, 0, 0, 0, 220, 220, 220, 0, 220, 220, 220, 59, 223, 223, 223, 201, 223, 223, 223, 254, 223, 223, 223, 254, 223, 223, 223, 254, 223, 223, 223, 254, 223, 223, 223, 254, 223, 223, 223, 254, 223, 223, 223, 254, 223, 223, 223, 254, 223, 223, 223, 200, 220, 220, 220, 59, 220, 220, 220, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 220, 220, 220, 0, 223, 223, 223, 0, 223, 223, 223, 0, 223, 223, 223, 0, 223, 223, 223, 0, 223, 223, 223, 0, 223, 223, 223, 0, 223, 223, 223, 0, 223, 223, 223, 0, 223, 223, 223, 0, 223, 223, 223, 0, 220, 220, 220, 0, 0, 0, 0, 0, 0, 0, 0, 0 ),
"format": "RGBA8",
"height": 16,
"mipmaps": false,
"width": 16
}

[sub_resource type="ImageTexture" id=3]
flags = 0
flags = 0
image = SubResource( 5 )
size = Vector2( 16, 16 )

[node name="PropertyFromTo" type="HBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( -430.525, -466.635 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CurrentValue" type="Button" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
hint_tooltip = "Click to specify a custom value"
size_flags_horizontal = 3
custom_fonts/font = SubResource( 1 )
text = "current node value"

[node name="CustomValue" type="HBoxContainer" parent="."]
visible = false
margin_left = 340.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
custom_constants/separation = 12

[node name="Vector3" type="HBoxContainer" parent="CustomValue"]
margin_right = 254.0
margin_bottom = 600.0

[node name="X" type="HBoxContainer" parent="CustomValue/Vector3"]
margin_right = 82.0
margin_bottom = 600.0
custom_constants/separation = 0

[node name="Panel" type="Panel" parent="CustomValue/Vector3/X"]
margin_right = 24.0
margin_bottom = 600.0
rect_min_size = Vector2( 24, 0 )
custom_styles/panel = SubResource( 4 )

[node name="Label" type="Label" parent="CustomValue/Vector3/X/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 289.0
margin_bottom = -289.0
size_flags_horizontal = 3
size_flags_vertical = 7
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.701961, 0.564706, 0.537255, 1 )
text = "x"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="x" type="LineEdit" parent="CustomValue/Vector3/X"]
margin_left = 24.0
margin_right = 82.0
margin_bottom = 600.0

[node name="Y" type="HBoxContainer" parent="CustomValue/Vector3"]
margin_left = 86.0
margin_right = 168.0
margin_bottom = 600.0
custom_constants/separation = 0

[node name="Panel" type="Panel" parent="CustomValue/Vector3/Y"]
margin_right = 24.0
margin_bottom = 600.0
rect_min_size = Vector2( 24, 0 )
custom_styles/panel = SubResource( 4 )

[node name="Label" type="Label" parent="CustomValue/Vector3/Y/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 289.0
margin_bottom = -289.0
size_flags_horizontal = 3
size_flags_vertical = 7
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.364706, 0.580392, 0.458824, 1 )
text = "y"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="x" type="LineEdit" parent="CustomValue/Vector3/Y"]
margin_left = 24.0
margin_right = 82.0
margin_bottom = 600.0

[node name="Z" type="HBoxContainer" parent="CustomValue/Vector3"]
margin_left = 172.0
margin_right = 254.0
margin_bottom = 600.0
custom_constants/separation = 0

[node name="Panel" type="Panel" parent="CustomValue/Vector3/Z"]
margin_right = 24.0
margin_bottom = 600.0
rect_min_size = Vector2( 24, 0 )
custom_styles/panel = SubResource( 4 )

[node name="Label" type="Label" parent="CustomValue/Vector3/Z/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 289.0
margin_bottom = -289.0
size_flags_horizontal = 3
size_flags_vertical = 7
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.415686, 0.368627, 0.6, 1 )
text = "z"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="x" type="LineEdit" parent="CustomValue/Vector3/Z"]
margin_left = 24.0
margin_right = 82.0
margin_bottom = 600.0

[node name="Vector2" type="HBoxContainer" parent="CustomValue"]
margin_left = 266.0
margin_right = 434.0
margin_bottom = 600.0

[node name="X" type="HBoxContainer" parent="CustomValue/Vector2"]
margin_right = 82.0
margin_bottom = 600.0
custom_constants/separation = 0

[node name="Panel" type="Panel" parent="CustomValue/Vector2/X"]
margin_right = 24.0
margin_bottom = 600.0
rect_min_size = Vector2( 24, 0 )
custom_styles/panel = SubResource( 4 )

[node name="Label" type="Label" parent="CustomValue/Vector2/X/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 289.0
margin_bottom = -289.0
size_flags_horizontal = 3
size_flags_vertical = 7
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.701961, 0.564706, 0.537255, 1 )
text = "x"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="x" type="LineEdit" parent="CustomValue/Vector2/X"]
margin_left = 24.0
margin_right = 82.0
margin_bottom = 600.0

[node name="Y" type="HBoxContainer" parent="CustomValue/Vector2"]
margin_left = 86.0
margin_right = 168.0
margin_bottom = 600.0
custom_constants/separation = 0

[node name="Panel" type="Panel" parent="CustomValue/Vector2/Y"]
margin_right = 24.0
margin_bottom = 600.0
rect_min_size = Vector2( 24, 0 )
custom_styles/panel = SubResource( 4 )

[node name="Label" type="Label" parent="CustomValue/Vector2/Y/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 289.0
margin_bottom = -289.0
size_flags_horizontal = 3
size_flags_vertical = 7
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.364706, 0.580392, 0.458824, 1 )
text = "y"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="x" type="LineEdit" parent="CustomValue/Vector2/Y"]
margin_left = 24.0
margin_right = 82.0
margin_bottom = 600.0

[node name="Number" parent="CustomValue" instance=ExtResource( 4 )]

[node name="Real" parent="CustomValue" instance=ExtResource( 4 )]
margin_left = 516.0
margin_right = 574.0
type = 1

[node name="FreeText" type="LineEdit" parent="CustomValue"]
margin_left = 586.0
margin_right = 644.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="DeleteButton" parent="CustomValue" instance=ExtResource( 2 )]
margin_left = 656.0
margin_right = 684.0
margin_bottom = 600.0
hint_tooltip = "delete custom value"
icon = SubResource( 3 )

[connection signal="pressed" from="CurrentValue" to="." method="_on_CurrentValue_pressed"]
[connection signal="pressed" from="CustomValue/DeleteButton" to="." method="_on_DeleteButton_pressed"]
